11/auth/code_volume.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
