11/auth/nginx_deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-auth-nginx-deployment
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-auth-nginx
  template:
    metadata:
      labels:
        app: app-auth-nginx
    spec:
      volumes:
      - name: app-auth-code
        persistentVolumeClaim:
          claimName: app-auth-code
      - name: config
        configMap:
          name: app-auth-nginx-config
          items:
          - key: config
            path: site.conf
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-auth-code
          mountPath: /code
        - name: config
          mountPath: /etc/nginx/conf.d
        livenessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 80
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
