11/auth/nginx_service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp

---
apiVersion: v1
kind: Service
metadata:
  name: app-auth-nginx-service
  namespace: myapp
spec:
  selector:
    app: app-auth-nginx
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 80
    name: web
  type: NodePort
