11/auth/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: myapp
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /auth
          backend:
            serviceName: app-auth-nginx-service
            servicePort: 8000
        - path: /login
          backend:
            serviceName: app-auth-nginx-service
            servicePort: 8000
        - path: /logout
          backend:
            serviceName: app-auth-nginx-service
            servicePort: 8000
        - path: /signin
          backend:
            serviceName: app-auth-nginx-service
            servicePort: 8000
        - path: /register
          backend:
            serviceName: app-auth-nginx-service
            servicePort: 8000
